[gd_scene load_steps=8 format=3 uid="uid://brjpvtoruag8"]

[ext_resource type="PackedScene" uid="uid://cfvbd5rae2l24" path="res://ui/star.tscn" id="1_gy4sx"]
[ext_resource type="Script" path="res://ui/level.gd" id="1_yqk64"]
[ext_resource type="StyleBox" uid="uid://belq1iq21fks6" path="res://ui/styles/button_normal.tres" id="2_s4vs2"]
[ext_resource type="StyleBox" uid="uid://ggprvljfilwg" path="res://ui/styles/button_hover.tres" id="3_0rcrv"]
[ext_resource type="StyleBox" uid="uid://iskf4f1kk7qh" path="res://ui/styles/button_pressed.tres" id="4_vuxdo"]
[ext_resource type="StyleBox" uid="uid://dpio2y8cu4np5" path="res://ui/styles/button_disabled.tres" id="5_hneqf"]
[ext_resource type="StyleBox" uid="uid://b0ati1sfqjmo0" path="res://ui/styles/button_focus.tres" id="6_cksw5"]

[node name="level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqk64")

[node name="v_box_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="button" type="Button" parent="v_box_container"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("2_s4vs2")
theme_override_styles/hover = ExtResource("3_0rcrv")
theme_override_styles/pressed = ExtResource("4_vuxdo")
theme_override_styles/disabled = ExtResource("5_hneqf")
theme_override_styles/focus = ExtResource("6_cksw5")
disabled = true
text = "1"

[node name="h_box_container" type="HBoxContainer" parent="v_box_container"]
layout_mode = 2
alignment = 1

[node name="star2" parent="v_box_container/h_box_container" instance=ExtResource("1_gy4sx")]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="star3" parent="v_box_container/h_box_container" instance=ExtResource("1_gy4sx")]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="star4" parent="v_box_container/h_box_container" instance=ExtResource("1_gy4sx")]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[connection signal="pressed" from="v_box_container/button" to="." method="_on_button_pressed"]
